--- a/win/pandoc.css
+++ b/win/pandoc.css
@@ -1,7 +1,3 @@
-/*
- * I add this to html files generated with pandoc.
- */
-
 html {
   font-size: 100%;
   overflow-y: scroll;
@@ -12,7 +8,7 @@ html {
 body {
   color: #444;
   font-family: Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif;
-  font-size: 12px;
+  font-size: 10px;
   line-height: 1.7;
   padding: 1em;
   margin: auto;
@@ -67,6 +63,8 @@ p {
 
 img {
   max-width: 100%;
+  display: block;
+  margin: auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -105,13 +103,14 @@ h6 {
 }
 
 blockquote {
-  background-color: lightgray;
+  background-color: #f8f8f8;
   margin: 0;
-  padding-left: 3em;
-  border-left: 0.5em black solid;
-  border-top: 0.1em black solid;
-  border-right: 0.1em black solid;
-  border-bottom: 0.1em black solid;
+  padding: 0 15px;
+  border-left: 4px black solid;
+  border-top: 1px black solid;
+  border-right: 1px black solid;
+  border-bottom: 1px black solid;
+  color: black;
   
 }
 
@@ -130,12 +129,16 @@ pre, code, kbd, samp {
   font-family: monospace, monospace;
   _font-family: 'courier new', monospace;
   font-size: 0.98em;
+
 }
 
 pre {
   white-space: pre;
   white-space: pre-wrap;
   word-wrap: break-word;
+  background-color: #f8f8f8;
+  border: 1px solid #ccc;
+  border-radius: 3px;
 }
 
 b, strong {
@@ -151,6 +154,10 @@ ins {
   color: #000;
   text-decoration: none;
 }
+
+del {
+  text-decoration: underline;
+}  
 
 mark {
   background: #ff0;
@@ -208,24 +215,43 @@ img {
   border: 0;
   -ms-interpolation-mode: bicubic;
   vertical-align: middle;
+  text-align: middle;
+  margin: auto;
+  display: block;
 }
 
-figure {
+.figure {
   display: block;
   text-align: center;
-  margin: 1em 0;
+  /*margin: 1em 0;*/
+  margin: 15px;
+  /* playing around here */
+  /*
+  border: 1px solid black;
+  border-radius: 3px;
+  margin: 15px;
+  */
 }
 
 figure img {
   border: none;
-  margin: 0 auto;
+}
+
+.caption {
+  font-size: 0.9em;
+  font-style: italic;
+  margin: auto;
+  text-align: center;
+  padding: 2px;
 }
 
 figcaption {
   font-size: 0.8em;
   font-style: italic;
-  margin: 0 0 .8em;
+  margin: auto;
+  text-align: center;
 }
+
 
 table {
   margin-bottom: 2em;
@@ -240,13 +266,23 @@ table th {
   background-color: #eee;
   border-top: 1px solid #ddd;
   border-left: 1px solid #ddd;
+  border-bottom: 1px solid black;
 }
 
 table td {
   padding: .2em 1em;
   border-top: 1px solid #ddd;
   border-left: 1px solid #ddd;
+  border-bottom: 1px solid black;
   vertical-align: top;
+}
+
+table tr {
+  background-color: #fff;
+}
+  
+table tr:nth-child(2n) {
+  background-color: #f8f8f8;
 }
 
 .author {
@@ -256,12 +292,12 @@ table td {
 
 @media only screen and (min-width: 480px) {
   body {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 @media only screen and (min-width: 768px) {
   body {
-    font-size: 16px;
+    font-size: 12px;
   }
 }
 @media print {
@@ -274,7 +310,7 @@ table td {
   }
 */
   body {
-    font-size: 12pt;
+    font-size: 8pt;
     max-width: 100%;
   }
 
